automation: build more stuff on x86 with docker
Signed-off-by: Wei Liu <wei.liu2@citrix.com>
Reviewed-by: Doug Goldstein <cardoe@cardoe.com>

--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -11,8 +11,6 @@ fi
 
 # build up our configure options
 cfgargs=()
-cfgargs+=("--disable-stubdom") # more work needed into building this
-cfgargs+=("--disable-rombios")
 cfgargs+=("--enable-docs")
 
 # SeaBIOS cannot be built with clang
@@ -20,9 +18,7 @@ if [[ "${CC}" == "clang" ]]; then
     cfgargs+=("--with-system-seabios=/usr/share/seabios/bios.bin")
 fi
 
-if [[ "${XEN_TARGET_ARCH}" == "x86_64" ]]; then
-    cfgargs+=("--enable-tools")
-else
+if [[ "${XEN_TARGET_ARCH}" == "arm64" || "${XEN_TARGET_ARCH}" == "arm32" ]]; then
     cfgargs+=("--disable-tools") # we don't have the cross depends installed
 fi
 
