--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -13,9 +13,13 @@ fi
 cfgargs=()
 cfgargs+=("--enable-docs")
 
-# SeaBIOS cannot be built with clang
 if [[ "${CC}" == "clang" ]]; then
+    # SeaBIOS cannot be built with clang
     cfgargs+=("--with-system-seabios=/usr/share/seabios/bios.bin")
+    # iPXE cannot be built with clang so we cannot build rombios
+    cfgargs+=("--disable-rombios")
+    # newlib cannot be built with clang so we cannot build stubdoms
+    cfgargs+=("--disable-stubdom")
 fi
 
 if [[ "${XEN_TARGET_ARCH}" == "arm64" || "${XEN_TARGET_ARCH}" == "arm32" ]]; then
