ci: enable builds with CentOS 7.x
Add the CentOS 7.x images to be used for build testing.

Signed-off-by: Doug Goldstein <cardoe@cardoe.com>
Reviewed-by: Wei Liu <wei.liu2@citrix.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,22 @@ centos-7-2-gcc-debug:
     debug: y
     XEN_TARGET_ARCH: x86_64
 
+centos-7-gcc:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: centos:7
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+centos-7-gcc-debug:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: centos:7
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
 debian-jessie-clang:
   <<: *build
   variables:
