x86: HVM_FEP should depend on HVM
Signed-off-by: Wei Liu <wei.liu2@citrix.com>
Acked-by: Andrew Cooper <andrew.cooper3@citrix.com>
Reviewed-by: Roger Pau Monné <roger.pau@citrix.com>

--- a/xen/arch/x86/Kconfig
+++ b/xen/arch/x86/Kconfig
@@ -94,6 +94,7 @@ config BIGMEM
 config HVM_FEP
 	bool "HVM Forced Emulation Prefix support" if EXPERT = "y"
 	default DEBUG
+	depends on HVM
 	---help---
 
 	  Compiles in a feature that allows HVM guest to arbitrarily
