--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -151,6 +151,70 @@ debian-stretch-32-gcc-debug:
     debug: y
     XEN_TARGET_ARCH: x86_32
 
+debian-unstable-clang:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: debian:unstable
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+debian-unstable-clang-debug:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: debian:unstable
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
+debian-unstable-gcc:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: debian:unstable
+    debug: n
+    XEN_TARGET_ARCH: x86_64
+
+debian-unstable-gcc-debug:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: debian:unstable
+    debug: y
+    XEN_TARGET_ARCH: x86_64
+
+debian-unstable-32-clang:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: debian:unstable-i386
+    debug: n
+    XEN_TARGET_ARCH: x86_32
+
+debian-unstable-32-clang-debug:
+  <<: *build
+  variables:
+    <<: *clang
+    CONTAINER: debian:unstable-i386
+    debug: y
+    XEN_TARGET_ARCH: x86_32
+
+debian-unstable-32-gcc:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: debian:unstable-i386
+    debug: n
+    XEN_TARGET_ARCH: x86_32
+
+debian-unstable-32-gcc-debug:
+  <<: *build
+  variables:
+    <<: *gcc
+    CONTAINER: debian:unstable-i386
+    debug: y
+    XEN_TARGET_ARCH: x86_32
+
 # Ubuntu Trusty's Clang is 3.4 while Xen requires 3.5
 
 ubuntu-trusty-gcc:
