automation: enable building rombios with clang
Previously it is disabled because the embedded ipxe can't be built
with clang. Now that ipxe is split out we can use --with-system-ipxe
to work around the issue.

Signed-off-by: Wei Liu <wei.liu2@citrix.com>

--- a/automation/scripts/build
+++ b/automation/scripts/build
@@ -16,8 +16,8 @@ cfgargs+=("--enable-docs")
 if [[ "${CC}" == "clang" ]]; then
     # SeaBIOS cannot be built with clang
     cfgargs+=("--with-system-seabios=/usr/share/seabios/bios.bin")
-    # iPXE cannot be built with clang so we cannot build rombios
-    cfgargs+=("--disable-rombios")
+    # iPXE cannot be built with clang
+    cfgargs+=("--with-system-ipxe=/usr/lib/ipxe/ipxe.pxe")
     # newlib cannot be built with clang so we cannot build stubdoms
     cfgargs+=("--disable-stubdom")
 fi
