xen/arm: make platform specific code dependent on ALL32_PLAT or ALL64_PLAT
Compile platform code that doesn't have its own specific kconfig option
only if ALL32_PLAT or ALL64_PLAT depending on the architecture. The
benefit is that choosing one of the platforms available as a menu
option allows the user not to build other unnecessary platform code.

Signed-off-by: Stefano Stabellini <stefanos@xilinx.com>
Reviewed-by: Andrii Anisov <andrii_anisov@epam.com>

--- a/xen/arch/arm/platforms/Makefile
+++ b/xen/arch/arm/platforms/Makefile
@@ -1,11 +1,11 @@
-obj-y += vexpress.o
-obj-$(CONFIG_ARM_32) += brcm.o
-obj-$(CONFIG_ARM_32) += exynos5.o
-obj-$(CONFIG_ARM_32) += midway.o
-obj-$(CONFIG_ARM_32) += omap5.o
-obj-$(CONFIG_ARM_32) += rcar2.o
-obj-$(CONFIG_ARM_64) += seattle.o
-obj-y += sunxi.o
-obj-$(CONFIG_ARM_64) += thunderx.o
-obj-$(CONFIG_ARM_64) += xgene-storm.o
+obj-$(CONFIG_ALL32_PLAT) += vexpress.o
+obj-$(CONFIG_ALL32_PLAT) += brcm.o
+obj-$(CONFIG_ALL32_PLAT) += exynos5.o
+obj-$(CONFIG_ALL32_PLAT) += midway.o
+obj-$(CONFIG_ALL32_PLAT) += omap5.o
+obj-$(CONFIG_ALL32_PLAT) += rcar2.o
+obj-$(CONFIG_ALL64_PLAT) += seattle.o
+obj-$(CONFIG_ALL_PLAT)   += sunxi.o
+obj-$(CONFIG_ALL64_PLAT) += thunderx.o
+obj-$(CONFIG_ALL64_PLAT) += xgene-storm.o
 obj-$(CONFIG_MPSOC_PLATFORM)  += xilinx-zynqmp.o
